--- a/modulo-4/mercadoliebre/public/css/styles.css
+++ b/modulo-4/mercadoliebre/public/css/styles.css
@@ -34,3 +34,35 @@ li a {
     color: black;
     font-size: 12px;
 }
+
+.burger-menu {
+    width: 40px;
+    height: 40px;
+    border: 1px solid ;
+    border-radius: 8px;
+    margin: 10px auto;
+    background-color: #1259c3;
+}
+
+/* .fas{
+
+} */
+
+.fa-bars{
+    font-size: 25px;
+    color: #ebebeb;
+    text-align: center;
+    margin-left: 9px;
+    margin-top: 5px;
+}
+
+.article-footer{
+    text-align: center;
+    margin: 35px 55px;
+}
+
+.article-footer i {
+    color: #1259c3;
+    font-size: 2em;
+    margin-bottom: 10px;
+}
