--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -30,6 +30,9 @@
             <li><a href="#">Ingresa</a></li>
             <li><a href="#">Mis compras</a></li>
         </ul>
+        <div class="burger-menu">
+            <i class="fas fa-bars"></i>
+            </div>
         </nav>
     </header>
     <main>
@@ -90,19 +93,27 @@
         </section>
     </main>
     <footer>
-        <h4>Pagá con tarjeta o en efectivo</h4>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+        <div class="article-footer">
+            <i class="fa-solid fa-credit-card"></i>
+            <h4>Pagá con tarjeta o en efectivo</h4>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
             puntos de pago. ¡Y siempre es seguro!</p>
-
-        <h4>Envío gratis desde $ 2.500</h4>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+        </div>
+        <div class="article-footer">
+            <i class="fa-solid fa-gift"></i>
+            <h4>Envío gratis desde $ 2.500</h4>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
             productos. Es un beneficio de Mercado Puntos.</p>
-
-        <h4>Seguridad, de principio a fin</h4>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+        </div>
+        <div class="article-footer">
+            <i class="fa-sharp fa-solid fa-user-shield"></i>
+            <h4>Seguridad, de principio a fin</h4>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
             porque estás siempre protegid@.</p>
-
-        <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+        </div>
+        <div class="article-footer">
+            <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+        </div>
         
     </footer>
 </body>
