Add media query

--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -11,24 +11,28 @@
     <title>Mercado Liebre</title>
 </head>
 <body>
-    <header>
-        <img class="logo-header" src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-        <input type="search">
-        <button><i class="fa-solid fa-magnifying-glass"></i></button>
+    <header class="main-header">
+        <div>
+            <img class="logo-header" src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
+            <input type="search">
+            <button><i class="fa-solid fa-magnifying-glass"></i></button>
+            
+            <h3 class="header-title">Comprá en cuotas y sin tarjeta de crédito</h3>
+        </div>
         
-        <h3 class="header-title">Comprá en cuotas y sin tarjeta de crédito</h3>
-        <nav>
-            <ul>
-                <li><a href="#" target="_blank">Ofertas</a></li>
-                <li><a href="#">Tiendas Oficiales</a></li>
-                <li><a href="#">Vender</a></li>
-                <li><a href="#">Ayuda</a></li> 
+
+        <nav class="main-navbar">
+            <ul class="left-navbar">
+                <li type="none"><a href="#" target="_blank">Ofertas</a></li>
+                <li type="none"><a href="#" target="_blank">Tiendas Oficiales</a></li>
+                <li type="none"><a href="#" target="_blank">Vender</a></li>
+                <li type="none"><a href="#" target="_blank">Ayuda</a></li> 
             </ul>
 
-        <ul>
-            <li><a href="#">Crea tu cuenta</a></li>
-            <li><a href="#">Ingresa</a></li>
-            <li><a href="#">Mis compras</a></li>
+        <ul class="right-navbar">
+            <li type="none"><a href="#" target="_blank">Crea tu cuenta</a></li>
+            <li type="none"><a href="#" target="_blank">Ingresa</a></li>
+            <li type="none"><a href="#" target="_blank">Mis compras</a></li>
         </ul>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -37,82 +41,82 @@
     </header>
     <main>
         <section>
-            <h3>Basado en tu última visita</h3>
-            <article>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
-                <p>$6770</p>
-                <p>40% OFF</p>
-                <h4>Cafetera Moulinex</h4>
+            <h3 class="main-section-title">Basado en tu última visita</h3>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+                <p class="price-article">$6770</p>
+                <p class="discount-article">40% OFF</p>
+                <h4 class="description-article">Cafetera Moulinex</h4>
             </article>
-            <article>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-                <p>$230000</p>
-                <p>20% OFF</p>
-                <h4>Macbook Pro 2019</h4>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <p class="price-article">$230000</p>
+                <p class="discount-article">20% OFF</p>
+                <h4 class="description-article">Macbook Pro 2019</h4>
             </article>
-            <article>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-                <p>$70500</p>
-                <p>10% OFF</p>
-                <h4>Samsung Galaxy S10</h4>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <p class="price-article">$70500</p>
+                <p class="discount-article">10% OFF</p>
+                <h4 class="description-article">Samsung Galaxy S10</h4>
             </article>
-            <article>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p>$23200</p>
-                <p>%5 OFF</p>
-                <h4>SmartTv Samsung 43"</h4>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-tv-samsung-smart.jpg" alt="">
+                <p class="price-article">$23200</p>
+                <p class="discount-article">%5 OFF</p>
+                <h4 class="description-article">SmartTv Samsung 43"</h4>
             </article>
         </section>
 
-        <section>
+        <section class="align-img">
             <title>Sección de Ofertas</title>
-            <div>
-                <img src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
-                <p>$6770</p>
-                <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
-            </div>
-            <div>
-                <img src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-                <p>$230000</p>
-                <p>20% OFF</p>
-                <p>Macbook Pro 2019</p>
-            </div>
-            <div>
-                <img src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-                <p>$70500</p>
-                <p>10% OFF</p>
-                <p>Samsung Galaxy S10</p>
-            </div>
-            <div>
-                <img src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p>$23200</p>
-                <p>%5 OFF</p>
-                <p>SmartTv Samsung 43"</p>
-            </div>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
+                <p class="price-article">$6770</p>
+                <p class="discount-article">40% OFF</p>
+                <h4 class="description-article">Cafetera Moulinex</h4>
+            </article>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
+                <p class="price-article">$230000</p>
+                <p class="discount-article">20% OFF</p>
+                <h4 class="description-article">Macbook Pro 2019</h4>
+            </article>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
+                <p class="price-article">$70500</p>
+                <p class="discount-article">10% OFF</p>
+                <h4 class="description-article">Samsung Galaxy S10</h4>
+            </article>
+            <article class="align-img">
+                <img class="main-imagen" src="/images/img-tv-samsung-smart.jpg" alt="">
+                <p class="price-article">$23200</p>
+                <p class="discount-article">%5 OFF</p>
+                <h4 class="description-article">SmartTv Samsung 43"</h4>
+            </article>
         </section>
     </main>
     <footer>
         <div class="article-footer">
             <i class="fa-solid fa-credit-card"></i>
-            <h4>Pagá con tarjeta o en efectivo</h4>
+            <h4 class="footer-title">Pagá con tarjeta o en efectivo</h4>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
             puntos de pago. ¡Y siempre es seguro!</p>
         </div>
         <div class="article-footer">
             <i class="fa-solid fa-gift"></i>
-            <h4>Envío gratis desde $ 2.500</h4>
+            <h4 class="footer-title">Envío gratis desde $ 2.500</h4>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
             productos. Es un beneficio de Mercado Puntos.</p>
         </div>
         <div class="article-footer">
             <i class="fa-sharp fa-solid fa-user-shield"></i>
-            <h4>Seguridad, de principio a fin</h4>
+            <h4 class="footer-title">Seguridad, de principio a fin</h4>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
             porque estás siempre protegid@.</p>
         </div>
         <div class="article-footer">
-            <h4>Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+            <h4 class="footer-title">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
         </div>
         
     </footer>
