--- a/modulo-4/mercadoliebre/public/css/styles.css
+++ b/modulo-4/mercadoliebre/public/css/styles.css
@@ -8,6 +8,7 @@ a {
     text-decoration: none;
 }
 
+/*HEADER*/
 
 header {
     background-color: #EAC926;
@@ -44,9 +45,9 @@ li a {
     background-color: #1259c3;
 }
 
-/* .fas{
-
-} */
+.fas{
+    background-color: #1259c3;
+}
 
 .fa-bars{
     font-size: 25px;
@@ -56,6 +57,38 @@ li a {
     margin-top: 5px;
 }
 
+/*MAIN*/
+
+.align-img{
+    text-align: center;
+    border: solid 1px #ebebeb;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+}
+.main-imagen {
+    width: 30%;
+
+}
+.description{
+    border-top: solid 1px #ebebeb;
+    padding: 15px;
+}
+
+.price-article {
+    font-size: 18px;
+    text-align: center;
+}
+
+.discount-article {
+    font-size: 16px;
+    text-align: center;
+}
+
+.description-article {
+    font-size: 16px;
+    text-align: center;
+}
+
+/*FOOTER*/
 .article-footer{
     text-align: center;
     margin: 35px 55px;
@@ -65,4 +98,89 @@ li a {
     color: #1259c3;
     font-size: 2em;
     margin-bottom: 10px;
+}
+
+.align-footer{
+    text-align: center;
+}
+.fa-credit-card{
+    font-size: 2em;
+    text-align: center;
+}
+
+.fa-gift{
+    font-size: 2em;
+    text-align: center; 
+}
+
+.fa-user-shield{
+    font-size: 2em;
+    text-align: center; 
+}
+
+.footer-tittle {
+    text-align: center;
+    font-size: 12px;
+    font-weight: lighter;
+}
+
+/*MEDIA QUERY*/
+
+@media (min-width: 768px) {
+    .main-header-top-bar {
+        display: flex;
+        justify-content: space-between;
+    }
+    .header-tittle {
+        max-width: 350px;
+        text-align: right;
+    }
+    
+    .burger-menu {
+        display: none;
+    }
+    
+    .main-navbar {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .main-navbar ul {
+        display: flex;
+    
+    }
+    
+    .main-navbar li {
+        margin: 0 4px;
+}
+}
+
+@media (min-width: 1200px) {
+    .logo {
+        width: 250px;
+    }
+
+    .main-header-top-bar,
+    .main-navbar {
+        max-width: 1200px;
+        margin: auto;
+    }
+    .header-tittle {
+        max-width: none;
+        font-size: 22px;
+        font-weight: 400;
+        text-align: right;
+        margin: 0;
+    }
+    .main-header-top-bar{
+        align-items: center;
+    }
+    
+    .main-navbar li {
+        margin: 5px 10px;
+    }
+    
+    .main-navbar a {
+        font-size: 19px;
+    }
 }
