--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -16,11 +16,8 @@
             <img class="logo-header" src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
             <input type="search">
             <button><i class="fa-solid fa-magnifying-glass"></i></button>
-            
-            <h3 class="header-title">Comprá en cuotas y sin tarjeta de crédito</h3>
         </div>
-        
-
+        <h3 class="header-title"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h3>        
         <nav class="main-navbar">
             <ul class="left-navbar">
                 <li type="none"><a href="#" target="_blank">Ofertas</a></li>
@@ -31,12 +28,12 @@
 
         <ul class="right-navbar">
             <li type="none"><a href="#" target="_blank">Crea tu cuenta</a></li>
-            <li type="none"><a href="#" target="_blank">Ingresa</a></li>
-            <li type="none"><a href="#" target="_blank">Mis compras</a></li>
+            <li type="none"><a href="#" target="_blank"> <i class="fas fa-sign-in-alt"></i> Ingresa</a></li>
+            <li type="none"><a href="#" target="_blank"><i class="fas fa-shopping-basket"></i>Mis compras</a></li>
         </ul>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
-            </div>
+        </div>
         </nav>
     </header>
     <main>
