--- a/modulo-4/mercadoliebre/public/css/styles.css
+++ b/modulo-4/mercadoliebre/public/css/styles.css
@@ -1,91 +1,175 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
+body{
+    font-family: 'Roboto', sans-serif;
+    background-color: #ebebeb;
 }
 
-/*HEADER*/
-
-header {
-    background-color: #EAC926;
-    width: 100%;
-    display: block;
-}
-
-img{
-    width: 20%;
-}
-
-.logo-header {
-    width: 45%;
-    margin-right: 80px;
-}
-
-.header-title {
-    text-align: center;
+h3{
     font-size: 24px;
-    font-weight: lighter;
 }
 
-li a {
-    color: black;
+p{
+    font-size: 12px;
+}
+div.top-header{
+    padding: 5%;
+}
+
+header{
+    background-color: #EAC926;
+}
+
+header div.logo{
+    width: 50%;
+}
+
+header div.logo{
+    padding: 10px;
+}
+
+header nav{
     font-size: 12px;
 }
 
-.burger-menu {
-    width: 40px;
+header ul li{
+    list-style-type: none;
+}
+
+header ul li a{
+    text-decoration: none;
+    color: #000;
+}
+
+header .form {
+    display: flex;
+    width: 70%;
+}
+
+header .form .input{
+    background-color: #FFF;
+    border: 1px solid #000;
+    outline: none;
+    color: #666;
+    padding: 2px;
+    font-size: 10px;
+    width: 100%;
+}
+
+header .form .submit{
+    background-color: #FFF;
+    border: 1px solid #000;
+    color: #666;
+    width: 25px;
+    margin-left: 5px;
+}
+
+header div.top-header p{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+}
+
+nav {
+    display: none;
+}
+
+
+div.burger-menu{
+    text-align: center;
+}
+
+div.burger-menu i{
+    background-color: #0044AA;
+    border-radius: 5px;
+    color: #FFF;
+    font-size: 20px;
     height: 40px;
-    border: 1px solid ;
-    border-radius: 8px;
-    margin: 10px auto;
-    background-color: #1259c3;
+    margin: 10px 0px 20px 0px;
+    padding: 10px;
+    width: 40px;
 }
 
-.fas{
-    background-color: #1259c3;
-}
-
-.fa-bars{
-    font-size: 25px;
-    color: #ebebeb;
-    text-align: center;
-    margin-left: 9px;
-    margin-top: 5px;
-}
-
-/*MAIN*/
-
-.align-img{
-    text-align: center;
-    border: solid 1px #ebebeb;
-    box-shadow: 0px 0px 10px rgb(100, 100, 100);
-}
-.main-imagen {
-    width: 30%;
-
-}
-.description{
-    border-top: solid 1px #ebebeb;
-    padding: 15px;
-}
-
-.price-article {
+.price{
     font-size: 18px;
-    text-align: center;
+    padding-right: 10px;
 }
 
-.discount-article {
+.discount,
+.description{
     font-size: 16px;
-    text-align: center;
+    font-weight: normal;
 }
 
-.description-article {
+h3,
+.description{
+    color: #666;
+}
+
+.description{
+    display: none;
+    margin-top: 20px;
+}
+
+section.banner img{
+    width: 100%;
+}
+
+main{
+    width: 90%;
+    margin: 0 auto;
+}
+
+main section article{
+    background-color: #fff;    
+    margin: 10px 0px;
+    position: relative;
+    border-radius: 10px;
+    padding-top: 10px;
+}
+
+main section article img{
+    width: 100%;
+}
+
+main section article i,
+.discount{
+    color: #39b54a;
+}
+
+main section article i{
+    display: block;
     font-size: 16px;
-    text-align: center;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+    border: 1px solid #39b54a;
+    background-color: #FFF;
+    border-radius: 50%;
+    position: absolute;
+    right: 20px;
+    top: -15px;
+}
+
+main section h3{
+    margin: 20px 0px;
+}
+
+article div.main-article{
+    width: 100%;
+    border-top: 1px solid #ebebeb;
+    padding: 15px;
+    position: relative;
+}
+
+.priceBox {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: stretch;
 }
 
 /*FOOTER*/
@@ -94,7 +178,7 @@ li a {
     margin: 35px 55px;
 }
 
-.article-footer i {
+ .i-footer {
     color: #1259c3;
     font-size: 2em;
     margin-bottom: 10px;
@@ -124,71 +208,34 @@ li a {
     font-weight: lighter;
 }
 
-/*MEDIA QUERY*/
+/*----------------------------TABLET----------------------------------*/
 
-@media (min-width: 361px) {
-    .main section article section {
+@media (min-width: 361px){ 
+    main section article .description, nav{
         display: block;
     }
 
-    
-}
-
-@media (min-width: 768px) {
-    .main-header-top-bar {
-        display: flex;
-        justify-content: space-between;
-    }
-    .header-tittle {
-        max-width: 350px;
-        text-align: right;
-    }
-    
-    .burger-menu {
-        display: none;
-    }
-    
-    .main-navbar {
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .main-navbar ul {
-        display: flex;
-    
-    }
-    
-    .main-navbar li {
-        margin: 0 4px;
-}
-}
-
-@media (min-width: 1200px) {
-    .logo {
-        width: 250px;
+    main section article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 40vw;
     }
 
-    .main-header-top-bar,
-    .main-navbar {
-        max-width: 1200px;
-        margin: auto;
+    .products {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
     }
-    .header-tittle {
-        max-width: none;
-        font-size: 22px;
-        font-weight: 400;
-        text-align: right;
-        margin: 0;
+}
+
+/*----------------------------DESK----------------------------------*/
+@media (min-width: 769px){ 
+    main section article{
+        box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        width: 20vw;
     }
-    .main-header-top-bar{
-        align-items: center;
-    }
-    
-    .main-navbar li {
-        margin: 5px 10px;
-    }
-    
-    .main-navbar a {
-        font-size: 19px;
+
+    .products {
+        display: flex;
+        flex-wrap: wrap;
     }
 }
