--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -1,121 +1,169 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/css/styles.css">
-    <script src="https://kit.fontawesome.com/374c176688.js" crossorigin="anonymous"></script>
-    <title>Mercado Liebre</title>
-</head>
-<body>
-    <header class="main-header">
-        <div>
-            <img class="logo-header" src="/images/logo-mercado-liebre.svg" alt="logo-mercado-liebre">
-            <input type="search">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-        </div>
-        <h3 class="header-title"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</h3>        
-        <nav class="main-navbar">
-            <ul class="left-navbar">
-                <li type="none"><a href="#" target="_blank">Ofertas</a></li>
-                <li type="none"><a href="#" target="_blank">Tiendas Oficiales</a></li>
-                <li type="none"><a href="#" target="_blank">Vender</a></li>
-                <li type="none"><a href="#" target="_blank">Ayuda</a></li> 
-            </ul>
-
-        <ul class="right-navbar">
-            <li type="none"><a href="#" target="_blank">Crea tu cuenta</a></li>
-            <li type="none"><a href="#" target="_blank"> <i class="fas fa-sign-in-alt"></i> Ingresa</a></li>
-            <li type="none"><a href="#" target="_blank"><i class="fas fa-shopping-basket"></i>Mis compras</a></li>
-        </ul>
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h3 class="main-section-title">Basado en tu última visita</h3>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
-                <p class="price-article">$6770</p>
-                <p class="discount-article">40% OFF</p>
-                <h4 class="description-article">Cafetera Moulinex</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-                <p class="price-article">$230000</p>
-                <p class="discount-article">20% OFF</p>
-                <h4 class="description-article">Macbook Pro 2019</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-                <p class="price-article">$70500</p>
-                <p class="discount-article">10% OFF</p>
-                <h4 class="description-article">Samsung Galaxy S10</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p class="price-article">$23200</p>
-                <p class="discount-article">%5 OFF</p>
-                <h4 class="description-article">SmartTv Samsung 43"</h4>
-            </article>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>Mercado Liebre</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
+            <div class="top-header">
+                <div class="logo"> 
+                    <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+                </div>
+                <div class="form" action="#" method="GET">
+                    <div class="input">Buscar productos, marcas y más</div>
+                    <div class="submit"><i class="fa fa-search"></i></div>
+                </div>
+            </div>
+            <p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
+            <nav>
+                <ul>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">Vender</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                </ul>
+                <ul>
+                    <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
+                    <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
+                    <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
+                </ul>
+            </nav>
+            <div class="burger-menu">
+                <i class="fa fa-bars burger"></i>
+            </div>
+        </header>
+        <section class="banner">
+            <img src="images/img-home-banner.jpg" alt="Banner de ofertas">
         </section>
-
-        <section class="align-img">
-            <title>Sección de Ofertas</title>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-cafetera-moulinex.jpg" alt="img-cafetera-moulinex">
-                <p class="price-article">$6770</p>
-                <p class="discount-article">40% OFF</p>
-                <h4 class="description-article">Cafetera Moulinex</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-macbook-pro-2019.jpg" alt="img-macbook-pro-2019">
-                <p class="price-article">$230000</p>
-                <p class="discount-article">20% OFF</p>
-                <h4 class="description-article">Macbook Pro 2019</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-samsung-galaxy-s10.jpg" alt="img-samsung-galaxy-s10">
-                <p class="price-article">$70500</p>
-                <p class="discount-article">10% OFF</p>
-                <h4 class="description-article">Samsung Galaxy S10</h4>
-            </article>
-            <article class="align-img">
-                <img class="main-imagen" src="/images/img-tv-samsung-smart.jpg" alt="">
-                <p class="price-article">$23200</p>
-                <p class="discount-article">%5 OFF</p>
-                <h4 class="description-article">SmartTv Samsung 43"</h4>
-            </article>
-        </section>
-    </main>
-    <footer>
-        <div class="article-footer">
-            <i class="fa-solid fa-credit-card"></i>
-            <h4 class="footer-title">Pagá con tarjeta o en efectivo</h4>
-            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
-        </div>
-        <div class="article-footer">
-            <i class="fa-solid fa-gift"></i>
-            <h4 class="footer-title">Envío gratis desde $ 2.500</h4>
-            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-            productos. Es un beneficio de Mercado Puntos.</p>
-        </div>
-        <div class="article-footer">
-            <i class="fa-sharp fa-solid fa-user-shield"></i>
-            <h4 class="footer-title">Seguridad, de principio a fin</h4>
-            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-        </div>
-        <div class="article-footer">
-            <h4 class="footer-title">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
-        </div>
+        <main>
+            <section class="last-visit">
+                <h3>Basado en tu última visita</h3>
+                <div class="products">
+                    <article>
+                        <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$6.770</p>
+                                <p class="discount">40% off</p>
+                            </div>
+                            <h4 class="description">Cafetera Moulinex</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$230.000</p>
+                                <p class="discount">20% off</p>
+                            </div>
+                            <h4 class="description">MacBook Pro 2019</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$70.500</p>
+                                <p class="discount">10% off</p>
+                            </div>
+                            <h4 class="description">Samsung Galaxy S10</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$23.200</p>
+                                <p class="discount">5% off</p>
+                            </div>
+                            <h4 class="description">SmartTv Samsung 43"</h4>
+                        </div>
+                    </article>
+                </div>
+            </section>
+            <section class="offers">
+                <h3>Ofertas</h3>
+                <div class="products">
+                    <article>
+                        <img src="images/img-cafetera-moulinex.jpg" alt="Cafetera" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$6.770</p>
+                                <p class="discount">40% off</p>
+                            </div>
+                            <h4 class="description">Cafetera Moulinex</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-macbook-pro-2019.jpg" alt="MacBook" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$230.000</p>
+                                <p class="discount">20% off</p>
+                            </div>
+                            <h4 class="description">MacBook Pro 2019</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-samsung-galaxy-s10.jpg" alt="Teléfono Móvil Samsung Galaxy" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$70.500</p>
+                                <p class="discount">10% off</p>
+                            </div>
+                        <h4 class="description">Samsung Galaxy S10</h4>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="images/img-tv-samsung-smart.jpg" alt="SmartTv Samsung" class="product_img">
+                        <div class="main-article">
+                            <i class="fas fa-truck"></i>
+                            <div class="priceBox">
+                                <p class="price">$23.200</p>
+                                <p class="discount">5% off</p>
+                            </div>
+                            <h4 class="description">SmartTv Samsung 43"</h4>
+                        </div>
+                    </article>
+                </div>  
+            </section>
+        </main>
+        <footer>
+            <div class="article-footer">
+                <i class="fa-solid fa-credit-card i-footer"></i>
+                <h4 class="footer-title">Pagá con tarjeta o en efectivo</h4>
+                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+            </div>
+            <div class="article-footer">
+                <i class="fa-solid fa-gifts i-footer"></i>
+                <h4 class="footer-title">Envío gratis desde $ 2.500</h4>
+                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos.</p>
+            </div>
+            <div class="article-footer">
+                <i class="fa-solid fa-user-shield i-footer"></i>
+                <h4 class="footer-title">Seguridad, de principio a fin</h4>
+                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+            </div>
+            <div class="article-footer">
+                <h4 class="footer-title">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
+            </div>
+            
+        </footer>
         
-    </footer>
-</body>
+    </body>
 </html>
