--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -12,8 +12,9 @@
     <body>
         <header>
             <div class="top-header">
-                <div class="logo"> 
-                    <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+                <div class="logo">
+                    <a href="/"><img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+                    </a>
                 </div>
                 <div class="form" action="#" method="GET">
                     <div class="input">Buscar productos, marcas y más</div>
