--- a/modulo-4/mercadoliebre/views/home.html
+++ b/modulo-4/mercadoliebre/views/home.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Mercado Liebre</title>
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/374c176688.js" crossorigin="anonymous"></script>
