--- a/modulo-4/mercadoliebre/views/login.html
+++ b/modulo-4/mercadoliebre/views/login.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Bienvenidxs a MercadoLiebre</title>
+        <title>Mercado Liebre</title>
+        <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
