--- a/views/home.html
+++ b/views/home.html
@@ -17,22 +17,24 @@
                     <a href="/"><img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
                     </a>
                 </div>
-                <div class="form" action="#" method="GET">
-                    <div class="input">Buscar productos, marcas y más</div>
-                    <div class="submit"><i class="fa fa-search"></i></div>
+                <div class="search" action="#" method="GET">
+                    <i class="fa fa-search"></i>
+                    <input type="text" placeholder="Buscar productos, marcas y más">
+                    <!-- <div class="input"></div>
+                    <div class="submit"></div> -->
                 </div>
                 <div class="buy-card"><p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
                 </div>
             </div>
             
             <nav>
-                <ul>
+                <ul class="first-ul">
                     <li><a href="#">Ofertas</a></li>
                     <li><a href="#">Tiendas Oficiales</a></li>
                     <li><a href="#">Vender</a></li>
                     <li><a href="#">Ayuda</a></li>
                 </ul>
-                <ul>
+                <ul class="second-ul">
                     <li><a href="/register">Creá tu cuenta <i class="far fa-id-card"></i></a></li>
                     <li><a href="/login">Ingresá <i class="fas fa-sign-in-alt"></i></a></li>
                     <li><a href="#">Mis compras <i class="fas fa-shopping-basket"></i></a></li>
@@ -146,25 +148,29 @@
             </section>
         </main>
         <footer>
-            <div class="article-footer">
-                <i class="fa-solid fa-credit-card i-footer"></i>
-                <h4 class="footer-title">Pagá con tarjeta o en efectivo</h4>
-                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-                puntos de pago. ¡Y siempre es seguro!</p>
+            <div class="container-articles">
+                <div class="article-footer">
+                    <i class="fa-solid fa-credit-card i-footer"></i>
+                    <h4 class="footer-title">Pagá con tarjeta o en efectivo</h4>
+                    <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                    puntos de pago. ¡Y siempre es seguro!</p>
+                </div>
+                <div class="article-footer">
+                    <i class="fa-solid fa-gifts i-footer"></i>
+                    <h4 class="footer-title">Envío gratis desde $ 2.500</h4>
+                    <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                    productos. Es un beneficio de Mercado Puntos.</p>
+                </div>
+                <div class="article-footer">
+                    <i class="fa-solid fa-user-shield i-footer"></i>
+                    <h4 class="footer-title">Seguridad, de principio a fin</h4>
+                    <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                    porque estás siempre protegid@.</p>
+                </div>
+
             </div>
-            <div class="article-footer">
-                <i class="fa-solid fa-gifts i-footer"></i>
-                <h4 class="footer-title">Envío gratis desde $ 2.500</h4>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                productos. Es un beneficio de Mercado Puntos.</p>
-            </div>
-            <div class="article-footer">
-                <i class="fa-solid fa-user-shield i-footer"></i>
-                <h4 class="footer-title">Seguridad, de principio a fin</h4>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                porque estás siempre protegid@.</p>
-            </div>
-            <div class="article-footer">
+            
+            <div>
                 <h4 class="footer-title">Copyright © 1999-2020 MercadoLiebre S.R.L.</h4>
             </div>
             
