--- a/views/home.html
+++ b/views/home.html
@@ -19,9 +19,7 @@
                 </div>
                 <div class="search" action="#" method="GET">
                     <i class="fa fa-search"></i>
-                    <input type="text" placeholder="Buscar productos, marcas y más">
-                    <!-- <div class="input"></div>
-                    <div class="submit"></div> -->
+                    <input class="input-search" type="text" placeholder="Buscar productos, marcas y más">
                 </div>
                 <div class="buy-card"><p><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de crédito</p>
                 </div>
