--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -1,5 +1,9 @@
 
 /*REGISTER-LOGIN*/
+main{
+    margin-bottom: 50%;
+}
+
 form{
     display: flex;
     flex-direction: column;
@@ -7,6 +11,7 @@ form{
     background-color: #7d757552;
     border-radius: 3px;
     max-width: 400px;
+    min-height: 400px;
 }
 
 input{
@@ -30,4 +35,24 @@ input{
     border-radius: 5px;
     color: #fff;
     padding: 5px;
+}
+
+.title-register{
+    margin-left: 10px;
+    font-weight: bold;
+}
+
+.login input {
+    margin-bottom: 30px;
+    width: 60%;
+    height: 30px;
+    margin: auto;
+    border-radius: 5px;
+    padding: 10px;
+}
+
+form img{
+    width: 100px;
+    height: 100px;
+    margin: auto;
 }
