--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -57,11 +57,6 @@ header ul li a{
     color: #000;
 }
 
-header .form {
-    display: flex;
-    height: 30px;
-    margin-top: 10px;
-}
 
 /*SEARCH*/
 
@@ -74,7 +69,7 @@ header .form {
     margin-top: 10px;
 }
 
-.search input{
+.search .input-search{
     border: none;
     border-radius: 10px;
     max-width: 80%;
@@ -83,11 +78,6 @@ header .form {
 .search .fa-search{
     width: 20%;
     margin: 5px;
-}
-
-header .form .submit{
-    color: #666;
-    padding: 10px;
 }
 
 /* .fa-search{
@@ -276,17 +266,6 @@ main section article:hover{
     .buy-card{
         margin: auto;
     }
-
-    .top-header .form{
-        height: 30px;
-    }
-    
-    header .form .input{
-        padding: 3px;
-        font-size: 12px;
-    }
-
-
 
     /*HORIZONAL NAV*/
     nav{
